# paper-181-system

./: README.md
examples/: basic_example.ipynb
netunicorn-base/: pyproject.toml  setup.cfg
netunicorn-client/: pyproject.toml  setup.cfg
netunicorn-director/netunicorn-authentication/: pyproject.toml  setup.cfg
netunicorn-director/netunicorn-compilation/: pyproject.toml  setup.cfg
netunicorn-director/netunicorn-gateway/: pyproject.toml  setup.cfg
netunicorn-director/netunicorn-infrastructure/: pyproject.toml  setup.cfg
netunicorn-director/netunicorn-mediator/: pyproject.toml  setup.cfg
netunicorn-director/netunicorn-processor/: pyproject.toml  setup.cfg
netunicorn-executor/: pyproject.toml  setup.cfg
netunicorn-executor/src/netunicorn/executor/: executor.py
netunicorn-library/: pyproject.toml
