[metadata]
name = netunicorn-executor
version = 0.1.1
description = Dummy description
license = MIT
keywords = netunicorn
author = redacted
author_email = redacted
classifiers =
  Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find_namespace:
install_requires =
    returns
    cloudpickle
    requests
    netunicorn-base

[options.packages.find]
where = src